--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: jekyll-theme-minimal
+title: Neurorave
+logo: figures/logo.png
+description: Embedded deep audio synthesis with expressive control
+google_analytics:
+theme: jekyll-theme-minima
